# car_price_prediction_tg_bot

./: .coverage  .gitignore  README.md  bot.py  database.py  db.py  handlers.py  preprocessing.py  pyproject.toml  rating.db  requirements.txt
htmlcov/: database_py.html  handlers_py.html  index.html  preprocessing_py.html  status.json
models/: na_imputer.pkl  normalizer.pkl  ohe.pkl  ridge_regressor.pkl
tests/: test_bot.py  test_db.py  test_handlers.py
