[tool.poetry]
name = "appied-python-hw-02"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandr.tereshin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
aiosqlite = "^0.20.0"
pandas = "^2.2.1"
aiogram = "^3.4.1"
scikit-learn = "1.3.2"
pydantic-settings = "^2.2.1"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
black = "^24.3.0"
flake8 = "^7.0.0"
aiogram-tests = {git = "https://github.com/Like6po/aiogram_tests.git"}
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = [
    "tests/*"
    ]
